tests/e2e/templated_strings.story
my_story = "asyncy"
a = 1
b = "b"
c = 3
d = "d"
obj = {}
t1 = "hello{my_story}world"
t2 = "{a}{b}{c}.{d}"
t3 = "{a}"
t4 = "hello\{with\}\{{obj[b][c]} paths"
